ingressgateway-manifest/second_ingressgateway.yaml
---
---
---
apiVersion: v1
kind: Service
metadata:
  name: second-istio-ingressgateway
  namespace: istio-system
  annotations:
  labels:
    chart: gateways
    heritage: Tiller
    release: istio
    app: second-istio-ingressgateway
    istio: second-ingressgateway
spec:
  type: LoadBalancer
  selector:
    release: istio
    app: second-istio-ingressgateway
    istio: second-ingressgateway
  ports:
    -
      name: status-port
      port: 15020
      targetPort: 15020
    -
      name: http2
      port: 80
      targetPort: 80
    -
      name: https
      port: 443
    -
      name: tcp
      port: 31400
    -
      name: https-kiali
      port: 15029
      targetPort: 15029
    -
      name: https-prometheus
      port: 15030
      targetPort: 15030
    -
      name: https-grafana
      port: 15031
      targetPort: 15031
    -
      name: https-tracing
      port: 15032
      targetPort: 15032
---
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-second-multicluster-ingressgateway
  namespace: istio-system
  labels:
    app: gateways
    chart: gateways
    heritage: Tiller
    release: istio
spec:
  selector:
    app: second-istio-ingressgateway
    istio: second-ingressgateway
  servers:
  - hosts:
    - "*.global"
    port:
      name: tls
      number: 443
      protocol: TLS
    tls:
      mode: AUTO_PASSTHROUGH
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-istio-ingressgateway
  namespace: istio-system
  labels:
    app: second-istio-ingressgateway
    chart: gateways
    heritage: Tiller
    istio: ingressgateway
    release: istio
spec:
  selector:
    matchLabels:
      app: second-istio-ingressgateway
      istio: second-ingressgateway
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: second-istio-ingressgateway
        chart: gateways
        heritage: Tiller
        istio: second-ingressgateway
        release: istio
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: second-istio-ingressgateway-service-account
      containers:
        - name: istio-proxy
          image: "docker.io/vmwareallspark/proxyv2:1.4.7-custom"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15020
            - containerPort: 80
            - containerPort: 443
            - containerPort: 31400
            - containerPort: 15029
            - containerPort: 15030
            - containerPort: 15031
            - containerPort: 15032
            - containerPort: 15090
              protocol: TCP
              name: http-envoy-prom
          args:
          - proxy
          - router
          - --domain
          - $(POD_NAMESPACE).svc.cluster.local
          - --log_output_level=default:info
          - --drainDuration
          - '45s' #drainDuration
          - --parentShutdownDuration
          - '1m0s' #parentShutdownDuration
          - --connectTimeout
          - '10s' #connectTimeout
          - --serviceCluster
          - second-istio-ingressgateway
          - --zipkinAddress
          - zipkin:9411
          - --proxyAdminPort
          - "15000"
          - --statusPort
          - "15020"
          - --controlPlaneAuthPolicy
          - MUTUAL_TLS
          - --discoveryAddress
          - istio-pilot:15011
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15020
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
          - name: istio-certs
            mountPath: /etc/certs
            readOnly: true
          - name: ingressgateway-certs
            mountPath: "/etc/istio/ingressgateway-certs"
            readOnly: true
          - name: ingressgateway-ca-certs
            mountPath: "/etc/istio/ingressgateway-ca-certs"
            readOnly: true
      volumes:
      - name: istio-certs
        secret:
          secretName: istio.istio-ingressgateway-service-account
          optional: true
      - name: ingressgateway-certs
        secret:
          secretName: "istio-ingressgateway-certs"
          optional: true
      - name: ingressgateway-ca-certs
        secret:
          secretName: "istio-ingressgateway-ca-certs"
          optional: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
                - "ppc64le"
                - "s390x"
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "ppc64le"
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "s390x"
---
---
---
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: second-istio-multicluster-ingressgateway
  namespace: istio-system
  labels:
    app: gateways
    chart: gateways
    heritage: Tiller
    release: istio
spec:
  workloadLabels:
    app: second-istio-ingressgateway
    istio: second-ingressgateway
  filters:
  - listenerMatch:
      portNumber: 443
      listenerType: GATEWAY
    insertPosition:
      index: AFTER
      relativeTo: envoy.filters.network.sni_cluster
    filterName: envoy.filters.network.tcp_cluster_rewrite
    filterType: NETWORK
    filterConfig:
      cluster_pattern: "\\.global$"
      cluster_replacement: ".svc.cluster.local"
---
